--- a/.github/workflows/main_andrewnl-react.yml
+++ b/.github/workflows/main_andrewnl-react.yml
@@ -26,12 +26,19 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-      
+          
+      # zip build
+      - name: Zip Release
+        uses: TheDoctor0/zip-release@0.6.2
+        with:
+          # Filename for archive
+          filename: release.zip
+          path: ./build/*
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
