--- a/.env.development.local
+++ b/.env.development.local
@@ -1,2 +1,3 @@
 SSL_CRT_FILE=C:\Users\Andrew\AppData\Roaming\ASP.NET\https\portfolioui.pem
 SSL_KEY_FILE=C:\Users\Andrew\AppData\Roaming\ASP.NET\https\portfolioui.key
+SKIP_PREFLIGHT_CHECK=true
