--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
+    "holderjs": "^2.9.9",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
+    "react-bootstrap": "^2.4.0",
+    "react-custom-scrollbars-2": "^4.5.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-icons": "^4.4.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^2.1.8",
+    "react-tsparticles": "^2.1.0",
+    "styled-components": "^5.3.5",
+    "tsparticles": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.53.0"
   }
 }
