--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "@fontsource/space-grotesk": "^4.5.8",
+    "bootstrap": "^5.2.0-beta1",
     "holderjs": "^2.9.9",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
@@ -11,13 +12,12 @@
     "react-custom-scrollbars-2": "^4.5.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
+    "react-parallax": "^3.5.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.8",
-    "react-tsparticles": "^2.1.0",
     "styled-components": "^5.3.5",
-    "tsparticles": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +44,11 @@
     ]
   },
   "devDependencies": {
+    "postcss": "^8.4.14",
+    "react-scripts": "^5.0.1",
     "sass": "^1.53.0"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   }
 }
