--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fontsource/space-grotesk": "^4.5.8",
     "bootstrap": "^5.2.0-beta1",
+    "craco": "^0.0.3",
     "holderjs": "^2.9.9",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
@@ -12,7 +13,7 @@
     "react-custom-scrollbars-2": "^4.5.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.4.0",
     "react-parallax": "^3.5.1",
     "react-router": "^6.3.0",
@@ -21,14 +22,16 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "postcss": "^8.4.14",
     "react-scripts": "^5.0.1",
     "sass": "^1.53.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "eject": "react-scripts eject",
+    "postbuild": "purgecss --css build/static/css/*.css --content build/index.html build/static/js/*.js --output build/static/css"
   },
   "eslintConfig": {
     "extends": [
