--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "sass": "^1.53.0"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "craco-start": "craco start purgecss --css src/css/*.css --content public/index.html src/**/*.js --output src/css",
+    "craco-build": "craco build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "eject": "react-scripts eject",
     "postbuild": "purgecss --css build/static/css/*.css --content build/index.html build/static/js/*.js --output build/static/css"
   },
