--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
   "name": "Andrew Leonberger's Online Portfolio",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "img/logo_white.svg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/svg+xml"
     },
     {
-      "src": "logo_white.png",
-      "type": "image/png",
+      "src": "img/logo_white.svg",
+      "type": "image/svg+xml",
       "sizes": "192x192"
     },
     {
-      "src": "logo_white.png",
-      "type": "image/png",
+      "src": "img/logo_white.svg",
+      "type": "image/svg+xml",
       "sizes": "512x512"
     }
   ],
