--- a/package.json
+++ b/package.json
@@ -28,12 +28,11 @@
     "sass": "^1.53.0"
   },
   "scripts": {
-    "craco-start": "craco start purgecss --css src/css/*.css --content public/index.html src/**/*.js --output src/css",
+    "craco-start": "craco start",
     "craco-build": "craco build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "postbuild": "purgecss --css build/static/css/*.css --content build/index.html build/static/js/*.js --output build/static/css"
   },
   "eslintConfig": {
     "extends": [
