--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
   "scripts": {
     "craco-start": "craco start",
     "craco-build": "craco build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "postbuild": "purgecss --css build/static/css/*.css --content build/index.html build/static/js/*.js --output build/static/css"
   },
   "eslintConfig": {
     "extends": [
