--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
   "scripts": {
     "craco-start": "craco start",
     "craco-build": "craco build",
-    "postbuild": "purgecss --css build/static/css/*.css --content build/index.html build/static/js/*.js --output build/static/css"
+    "postbuild": "purgecss --css build/static/css/*.css --content build/index.html build/static/js/*.js --output build/static/css",
+    "start": "react-scripts start",
+    "build": "craco build",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
