--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "portfolioreact",
-  "version": "1.1.0",
+  "name": "my-webpack-project",
+  "version": "1.0.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
     "@fontsource/space-grotesk": "^4.5.8",
     "bootstrap": "^5.2.0-beta1",
-    "craco": "^0.0.3",
+    "clean-webpack-plugin": "^4.0.0",
     "holderjs": "^2.9.9",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
@@ -16,23 +17,42 @@
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.4.0",
     "react-parallax": "^3.5.1",
+    "react-refresh-webpack-plugin": "^0.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^4.1.3",
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "@webpack-cli/generators": "^2.5.0",
+    "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "glob-parent": ">=5.1.2",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
+    "postcss-preset-env": "^7.7.2",
+    "prettier": "^2.7.1",
     "react-scripts": "^5.0.1",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   },
   "scripts": {
-    "craco-start": "craco start",
-    "craco-build": "craco build",
-    "postbuild": "purgecss --css build/static/css/*.css --content build/index.html build/static/js/*.js --output build/static/css",
-    "start": "craco start",
-    "build": "craco build",
+    "start": "react-scripts start webpack --config webpack.config.js",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -52,5 +72,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "My webpack project"
 }
