--- a/package.json
+++ b/package.json
@@ -42,17 +42,19 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
   },
   "scripts": {
-    "start": "react-scripts start webpack --config webpack.config.js",
+    "start": "webpack",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production",
     "watch": "webpack --watch",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "webpack serve"
   },
   "eslintConfig": {
     "extends": [
