--- a/package.json
+++ b/package.json
@@ -24,10 +24,6 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
-    "@babel/preset-react": "^7.18.6",
-    "@webpack-cli/generators": "^2.5.0",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
@@ -48,13 +44,13 @@
     "webpack-dev-server": "^4.9.3"
   },
   "scripts": {
-    "start": "webpack",
-    "build": "webpack --mode=production",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production",
+    "start:prod": "webpack serve",
+    "start:dev": "react-scripts start dev",
+    "build:dev": "webpack --config webpack.config.js --mode=development",
+    "build:prod": "webpack --config webpack.config.js --mode=production",
     "watch": "webpack --watch",
     "eject": "react-scripts eject",
-    "serve": "webpack serve"
+    "server": "webpack serve"
   },
   "eslintConfig": {
     "extends": [
