--- a/manifest.json
+++ b/manifest.json
@@ -17,9 +17,9 @@
       "src": "img/logo_white.svg",
       "type": "image/svg+xml",
       "sizes": "512x512"
-    }
+    },
   ],
-  "start_url": ".",
+  "start_url": "/?source=pwa",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
