--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "webpack-dev-server": "^4.9.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start webpack --config webpack.config.js",
     "build": "react-scripts build",
     "build:dev": "webpack --config webpack.config.js --mode=development"
   },
