--- a/web.config
+++ b/web.config
@@ -3,6 +3,10 @@
   <system.webServer>
     <staticContent>
       <mimeMap fileExtension=".json" mimeType="application/json" />
+ 			<remove fileExtension=".woff" />
+			<remove fileExtension=".woff2" />
+			<mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+			<mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />     
     </staticContent>
     <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
