--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.4.0",
-    "react-parallax": "^3.5.1",
-    "react-refresh-webpack-plugin": "^0.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "react-scroll": "^1.8.7",
+    "react-scroll-parallax": "^3.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
@@ -36,11 +34,14 @@
     "postcss-loader": "^7.0.0",
     "postcss-preset-env": "^7.7.2",
     "prettier": "^2.7.1",
+    "react-refresh-webpack-plugin": "^0.1.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
+    "web-vitals": "^2.1.4",
     "webpack": "^5.73.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
   },
