--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
     "react-scroll-parallax": "^3.2.0",
+    "react-scrollspy-nav": "^1.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
