--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "holderjs": "^2.9.9",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
+    "react-awesome-reveal": "^3.8.1",
     "react-bootstrap": "^2.4.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-device-detect": "^2.2.2",
@@ -23,27 +24,27 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "glob-parent": ">=5.1.2",
-    "react-scripts": "^5.0.1",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
+    "glob-parent": ">=5.1.2",
+    "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
     "postcss-preset-env": "^7.7.2",
     "prettier": "^2.7.1",
+    "react-refresh-webpack-plugin": "^0.1.0",
+    "react-scripts": "^5.0.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "web-vitals": "^2.1.4",
-    "webpack-cli": "^4.10.0",
     "webpack": "^5.73.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "react-refresh-webpack-plugin": "^0.1.0",
-    "html-webpack-plugin": "^5.5.0",
     "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
   },
   "scripts": {
