--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "browserslist": ">=4.16.5",
+    "glob-parent": ">=5.1.2",
+    "immer": ">=9.0.6",
+    "shell-quote": ">=1.7.3",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
-    "glob-parent": ">=5.1.2",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.14",
