--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^16.0.1",
+    "env-cmd": "^10.1.0",
     "@fontsource/space-grotesk": "^4.5.8",
     "bootstrap": "^5.2.0-beta1",
     "react": "^18.2.0",
@@ -23,16 +25,15 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "browserslist": ">=4.16.5",
-    "glob-parent": ">=5.1.2",
-    "immer": ">=9.0.6",
-    "shell-quote": ">=1.7.3",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
+    "browserslist": ">=4.16.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
+    "glob-parent": ">=5.1.2",
     "html-webpack-plugin": "^5.5.0",
+    "immer": ">=9.0.6",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
@@ -42,7 +43,9 @@
     "react-scripts": "^5.0.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
+    "shell-quote": ">=1.7.3",
     "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.73.0",
     "webpack-bundle-analyzer": "^4.5.0",
@@ -50,8 +53,8 @@
     "webpack-dev-server": "^4.9.3"
   },
   "scripts": {
-    "start": "react-scripts start webpack --config webpack.config.js",
-    "build": "webpack --config webpack.config.js --mode=production",
+    "start": "env-cmd -f .env.development.local react-scripts start webpack --config webpack.config.js",
+    "build": "env-cmd -f .env.production.local webpack --config webpack.config.js --mode=production",
     "build:dev": "webpack --config webpack.config.js --mode=development"
   },
   "eslintConfig": {
