--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
-    "dotenv": "^16.0.1",
-    "env-cmd": "^10.1.0",
     "@fontsource/space-grotesk": "^4.5.8",
     "bootstrap": "^5.2.0-beta1",
+    "dotenv": "^16.0.1",
+    "env-cmd": "^10.1.0",
+    "imagekitio-react": "^1.1.1",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
     "react-awesome-reveal": "^3.8.1",
