--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,14 +2,15 @@
   "rules": {
     "prefer-template": "off",
     "no-var": 1,
-    "no-unused-vars": 1,
+    "no-undef": 0,
+    "no-unused-vars": 0,
     "camelcase": 1,
     "no-nested-ternary": 1,
-    "no-console": 1,
+    "no-console": 0,
     "no-template-curly-in-string": 1,
     "no-self-compare": 1,
     "import/prefer-default-export": 0,
-    "arrow-body-style": 1,
+    "arrow-body-style": 0,
     "import/no-extraneous-dependencies": ["off", { "devDependencies": false }]
   },
   "ignorePatterns": ["build", "node_modules", "webpack.*", "./src/config/paths.js"],
@@ -18,6 +19,7 @@
     "es6": true
   },
   "extends": ["eslint:recommended", "prettier"],
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module"
