--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,26 +1,37 @@
 {
+  "id": "/",
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#0099ff",
+  "background_color": "#003366",
   "short_name": "Andrew Leonberger | Portfolio",
   "name": "Andrew Leonberger's Online Portfolio",
-  "description": "A portfolio site about Andrew Nelson Leonberger",
+  "description": "Andrew Nelson Leonberger's online portfolio website",
   "icons": [
     {
-      "src": "../../src/img/logo_white.png",
-      "type": "image/png",
-      "sizes": "64x64 32x32 24x24 16x16"
+      "src": "./favicon.ico",
+      "sizes": "16x16",
+      "type": "image/x-icon"
     },
     {
-      "src": "../../src/img/logo_white.png",
+      "src": "./assets/logos/logo_64.png",
+      "type": "image/png",
+      "sizes": "64x64"
+    },
+    {
+      "src": "./assets/logos/logo_144.png",
+      "type": "image/png",
+      "sizes": "144x144"
+    },
+    {
+      "src": "./assets/logos/logo_192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "../../src/img/logo_white.png",
+      "src": "./assets/logos/logo_512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
-  ],
-  "start_url": "/?source=pwa",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
