testing, config changes, mapping

--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "@fontsource/space-grotesk": "^4.5.8",
     "bootstrap": "^5.2.0-beta1",
     "imagekitio-react": "^1.1.1",
@@ -25,11 +22,27 @@
     "react-scroll-parallax": "^3.2.0",
     "react-scrollspy-nav": "^1.3.0",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.5.3",
+    "workbox-broadcast-update": "^6.5.3",
+    "workbox-cacheable-response": "^6.5.3",
+    "workbox-core": "^6.5.3",
+    "workbox-expiration": "^6.5.3",
+    "workbox-google-analytics": "^6.5.3",
+    "workbox-navigation-preload": "^6.5.3",
+    "workbox-precaching": "^6.5.3",
+    "workbox-range-requests": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3",
+    "workbox-streams": "^6.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/eslint-parser": "^7.18.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react-test-renderer": "^18.2.0",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "browserslist": ">=4.16.5",
@@ -51,25 +64,24 @@
     "postcss-loader": "^7.0.0",
     "postcss-preset-env": "^7.7.2",
     "prettier": "^2.7.1",
+    "pretty": "^2.0.0",
     "react-refresh-webpack-plugin": "^0.1.0",
     "react-scripts": "^5.0.1",
-    "shell-quote": ">=1.7.3",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
-    "xml-loader": "^1.2.1",
+    "shell-quote": ">=1.7.3",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.73.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "^4.9.3",
+    "xml-loader": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start webpack --config webpack.config.js env-cmd -f .env.production.local",
     "start:dev": "react-scripts start webpack --config webpack.config.dev.js env-cmd -f .env.development.local",
     "build": "webpack --config ./src/config/webpack.prod.js --mode=production",
-    "test": "react-scripts test",
-    "package": "npm i"
   },
   "eslintConfig": {
     "extends": [
