--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.3.0",
     "@fontsource/space-grotesk": "^4.5.8",
     "bootstrap": "^5.2.0-beta1",
     "imagekitio-react": "^1.1.1",
@@ -11,18 +14,38 @@
     "react-animations": "^1.0.0",
     "react-awesome-reveal": "^3.8.1",
     "react-bootstrap": "^2.4.0",
-    "react-custom-scrollbars-2": "^4.5.0",
-    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.4.0",
-    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scroll": "^1.8.7",
     "react-scroll-parallax": "^3.2.0",
     "react-scrollspy-nav": "^1.3.0",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "react-scripts": "5.0.1",
+    "@babel/core": "^7.18.9",
+    "@babel/eslint-parser": "^7.18.9",
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "dotenv-webpack": "^8.0.0",
+    "env-cmd": "^10.1.0",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss-loader": "^7.0.0",
+    "prettier": "^2.7.1",
+    "sass-loader": "^13.0.2",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3",
+    "webpack-merge": "^5.8.0",
     "workbox-background-sync": "^6.5.3",
     "workbox-broadcast-update": "^6.5.3",
     "workbox-cacheable-response": "^6.5.3",
@@ -35,48 +58,6 @@
     "workbox-routing": "^6.5.3",
     "workbox-strategies": "^6.5.3",
     "workbox-streams": "^6.5.3"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/eslint-parser": "^7.18.2",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react-test-renderer": "^18.2.0",
-    "autoprefixer": "^10.4.7",
-    "babel-loader": "^8.2.5",
-    "browserslist": ">=4.16.5",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
-    "dotenv": "^16.0.1",
-    "dotenv-webpack": "^8.0.0",
-    "env-cmd": "^10.1.0",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "glob-parent": ">=5.1.2",
-    "html-webpack-plugin": "^5.5.0",
-    "immer": ">=9.0.6",
-    "mini-css-extract-plugin": "^2.6.1",
-    "postcss": "^8.4.14",
-    "postcss-loader": "^7.0.0",
-    "postcss-preset-env": "^7.7.2",
-    "prettier": "^2.7.1",
-    "pretty": "^2.0.0",
-    "react-refresh-webpack-plugin": "^0.1.0",
-    "react-scripts": "^5.0.1",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
-    "shell-quote": ">=1.7.3",
-    "style-loader": "^3.3.1",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.73.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3",
-    "xml-loader": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start webpack --config webpack.config.js env-cmd -f .env.production.local",
