--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "andrewnl-portfolio",
-  "version": "1.0.0",
+  "name": "andrewnl",
+  "version": "1.5.0",
   "private": true,
   "main": "index.js",
   "dependencies": {
+    "@fontsource/space-grotesk": "^4.5.8",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
-    "@fontsource/space-grotesk": "^4.5.8",
     "bootstrap": "^5.2.0-beta1",
     "imagekitio-react": "^1.1.1",
     "react": "^18.2.0",
@@ -20,10 +20,21 @@
     "react-scroll-parallax": "^3.2.0",
     "react-scrollspy-nav": "^1.3.0",
     "styled-components": "^5.3.5",
+    "workbox-background-sync": "^6.5.3",
+    "workbox-broadcast-update": "^6.5.3",
+    "workbox-cacheable-response": "^6.5.3",
+    "workbox-core": "^6.5.3",
+    "workbox-expiration": "^6.5.3",
+    "workbox-google-analytics": "^6.5.3",
+    "workbox-navigation-preload": "^6.5.3",
+    "workbox-precaching": "^6.5.3",
+    "workbox-range-requests": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3",
+    "workbox-streams": "^6.5.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
     "@babel/core": "^7.18.9",
     "@babel/eslint-parser": "^7.18.9",
     "babel-loader": "^8.2.5",
@@ -41,28 +52,18 @@
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.0",
     "prettier": "^2.7.1",
+    "react-scripts": "5.0.1",
     "sass-loader": "^13.0.2",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3",
-    "webpack-merge": "^5.8.0",
-    "workbox-background-sync": "^6.5.3",
-    "workbox-broadcast-update": "^6.5.3",
-    "workbox-cacheable-response": "^6.5.3",
-    "workbox-core": "^6.5.3",
-    "workbox-expiration": "^6.5.3",
-    "workbox-google-analytics": "^6.5.3",
-    "workbox-navigation-preload": "^6.5.3",
-    "workbox-precaching": "^6.5.3",
-    "workbox-range-requests": "^6.5.3",
-    "workbox-routing": "^6.5.3",
-    "workbox-strategies": "^6.5.3",
-    "workbox-streams": "^6.5.3"
+    "webpack-merge": "^5.8.0"
   },
   "scripts": {
-    "start": "react-scripts start webpack --config webpack.config.js env-cmd -f .env.production.local",
-    "start:dev": "react-scripts start webpack --config webpack.config.dev.js env-cmd -f .env.development.local",
     "build": "webpack --config ./src/config/webpack.prod.js --mode=production",
+    "start": "serve -s build",
+    "start:dev": "react-scripts start webpack --config webpack.config.js env-cmd -f ./.env",
+    "serve:build": "serve -s build",
     "test": "react-scripts test"
   },
   "eslintConfig": {
@@ -83,5 +84,5 @@
       "last 1 safari version"
     ]
   },
-  "description": "My webpack project"
+  "description": "Andrew Leonberger Portfolio"
 }
