--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
     "bootstrap": "^5.2.0-beta1",
+    "dotenv": "^16.0.1",
     "imagekitio-react": "^1.1.1",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
@@ -51,6 +52,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "json-loader": "^0.5.7",
     "postcss-loader": "^7.0.0",
     "prettier": "^2.7.1",
     "react-scripts": "5.0.1",
