--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
     "postcss-loader": "^7.0.0",
     "postcss-preset-env": "^7.7.2",
     "prettier": "^2.7.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass-loader": "^13.0.2",
+    "terser-webpack-plugin": "^5.3.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3",
