--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "webpack-merge": "^5.8.0"
   },
   "scripts": {
-    "start": "env-cmd -e production && serve -s build",
+    "start": "serve -s build && env-cmd -e production",
     "build": "webpack --config ./src/config/webpack.prod.js && env-cmd -e production serve",
     "start:dev": "react-scripts start webpack --config webpack.config.js && env-cmd -e ./development ",
     "test:dev": "react-scripts test"
