--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+.env.js
+.env.json
+.env-cmdrc
 
 npm-debug.log*
 yarn-debug.log*
