--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
     "react-scroll-parallax": "^3.2.0",
     "react-scrollspy-nav": "^1.3.0",
     "service-worker-webpack": "^0.0.11",
@@ -38,6 +37,7 @@
     "workbox-streams": "^6.5.3"
   },
   "devDependencies": {
+    "react-scripts": "^5.0.1",
     "@babel/core": "^7.18.9",
     "@babel/eslint-parser": "^7.18.9",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -59,25 +59,32 @@
     "postcss-loader": "^7.0.0",
     "postcss-preset-env": "^7.7.2",
     "prettier": "^2.7.1",
+    "react-error-overlay": "6.0.9",
+    "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
     "terser-webpack-plugin": "^5.3.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "process": "0.11.10"
   },
   "scripts": {
+    "test": "react-scripts test",
     "start": "serve -s build && env-cmd -e production",
-    "build": "webpack --config ./src/config/webpack.prod.js && env-cmd -e production serve",
-    "start:dev": "react-scripts start webpack --config webpack.config.js && env-cmd -e ./development ",
-    "test:dev": "react-scripts test"
+    "build": "webpack --config ./src/config/webpack.prod.js && env-cmd -f .env",
+    "start:dev": "react-scripts start webpack --config webpack.config.js --mode=production && env-cmd -e development",
+    "preinstall": "npx npm-force-resolutions"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   },
   "browserslist": {
     "production": [
