--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.3.0",
     "bootstrap": "^5.2.0-beta1",
-    "env-cmd": "^10.1.0",
+    "dotenv-webpack": "^8.0.0",
     "imagekitio-react": "^1.1.1",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.3.0",
     "react-scroll-parallax": "^3.2.0",
     "react-scrollspy-nav": "^1.3.0",
+    "sass": "^1.53.0",
     "service-worker-webpack": "^0.0.11",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
@@ -37,18 +38,14 @@
     "workbox-streams": "^6.5.3"
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1",
     "@babel/core": "^7.18.9",
     "@babel/eslint-parser": "^7.18.9",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.18.9",
-    "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
-    "dotenv-webpack": "^8.0.0",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
@@ -57,34 +54,25 @@
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.0",
-    "postcss-preset-env": "^7.7.2",
     "prettier": "^2.7.1",
-    "react-error-overlay": "6.0.9",
-    "sass": "^1.53.0",
+    "react-scripts": "5.0.1",
     "sass-loader": "^13.0.2",
-    "terser-webpack-plugin": "^5.3.3",
-    "url-loader": "^4.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3",
-    "webpack-merge": "^5.8.0",
-    "process": "0.11.10"
+    "webpack-merge": "^5.8.0"
   },
   "scripts": {
-    "test": "react-scripts test",
-    "start": "serve -s build && env-cmd -e production",
-    "build": "webpack --config ./src/config/webpack.prod.js && env-cmd -e production",
-    "start:dev": "react-scripts start webpack --config webpack.config.js --mode=production && env-cmd -e development",
-    "preinstall": "npx npm-force-resolutions"
+    "start": "serve -s build",
+    "build": "webpack --config ./src/config/webpack.prod.js --mode=production",
+    "start:dev": "react-scripts start webpack --config webpack.config.js env-cmd -f .env",
+    "test:dev": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
-  },
-  "resolutions": {
-    "react-error-overlay": "6.0.9"
   },
   "browserslist": {
     "production": [
