--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,27 +9,27 @@
   "description": "Andrew Nelson Leonberger's online portfolio website",
   "icons": [
     {
-      "src": "./favicon.ico",
+      "src": "favicon.ico",
       "sizes": "16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "./assets/logos/logo_64.png",
+      "src": "assets/logos/logo_64.png",
       "type": "image/png",
       "sizes": "64x64"
     },
     {
-      "src": "./assets/logos/logo_144.png",
+      "src": "assets/logos/logo_144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "./assets/logos/logo_192.png",
+      "src": "assets/logos/logo_192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "./assets/logos/logo_512.png",
+      "src": "assets/logos/logo_512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
