--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "html-webpack-plugin": "^5.5.0",
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^2.6.1",
+    "file-loader": "^6.2.0",
     "postcss-loader": "^7.0.0",
     "prettier": "^2.7.1",
     "react-scripts": "5.0.1",
