--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ src/dist
 prod.env.local
 package-lock.json
 src/css
+src/css/App.css
+src/css/Buttons.css
+src/css/Components.css
+src/css/Keyframes.css
