--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.0-beta1",
     "dotenv-webpack": "^8.0.0",
     "imagekitio-react": "^1.1.1",
+    "next": "^12.2.3",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
     "react-awesome-reveal": "^3.8.1",
@@ -50,10 +51,10 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^2.6.1",
-    "file-loader": "^6.2.0",
     "postcss-loader": "^7.0.0",
     "prettier": "^2.7.1",
     "react-scripts": "5.0.1",
